fixed mobile description not fitting

--- a/react-portfolio-project/src/App.css
+++ b/react-portfolio-project/src/App.css
@@ -793,6 +793,10 @@ a:hover {
 /* ////// Mobile properties ////// */
 
 @media (max-width: 480px) { 
+  .body {
+    overflow: none;
+  }
+
   /* /// Nav-Bar /// */
   .nav-bar-container {
     position: static;
@@ -845,13 +849,24 @@ a:hover {
     justify-content: center;
   }
 
+  .project-title {
+    width: 325px;
+    font-size: 30px;
+    background-color: black;
+  }
+
+  .info-text {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+  }
+
   .info-text.visible {
     font-size: 13px;
   }
 
-  .project-title {
-    font-size: 35px;
-    background-color: black;
+  .toggle-button {
+    margin: 0px;
   }
 
   .content {
@@ -859,7 +874,11 @@ a:hover {
   }
   
   .information {
+    display: flex;
     width: 100%;
+    flex-direction: column;
+    align-items: center;
+    font-size: 13px;
   }
 
   .picture-div {
@@ -870,8 +889,8 @@ a:hover {
   .picture {
     border: black solid 3px;
     padding: 0px;
-    /* width: 375px; */
-    width: 100%;
+    width: 375px;
+    /* width: 100%; */
     height: 225px;
     border-radius: 10px;
   } 
